--- a/_data/items.yml
+++ b/_data/items.yml
@@ -1232,9 +1232,6 @@
   - name: 'Gathering Area: Plain'
     percent: 20
     season: Always
-  - name: 'Gathering Area: Plain'
-    percent: 20
-    season: Always
   - name: Bounteous Earth Grotto
     percent: 30
     season: Always
@@ -1876,7 +1873,7 @@
     season: Spring
     try: 5
   food_bonus:
-    luck: 2
+    luck: 5
   name: Tea
   price: 1
   sub_category: ''
@@ -2337,7 +2334,7 @@
   name: Tofu
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: This rice has been mixed with water, pounded, and moldedinto a round
     shape. In the olden days, the children of menused to regularly present these as
     an offering to the gods.
@@ -3301,7 +3298,7 @@
   name: Cheese
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: This appears to be herring that was preserved with herbs,vinegar, and
     salt. Myrthe says that it is a famous productof her homeland, Ventania. It's not
     entirely unlike sushi.
@@ -3321,7 +3318,7 @@
   name: Dried Herring
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: A grain that has been dried out in the sun and robbedof its water contents.
     It is best when soaked in boiledwater to rehydrate it before being eaten.
   ingredients:
@@ -3337,7 +3334,7 @@
   name: Dried Boiled Rice
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: Salted salmon, dried in the sea breeze to preserve it.While it may
     keep for some time, it also happens to beincredibly salty. Take care not to gorge
     yourself on it.
@@ -3433,7 +3430,7 @@
   name: Dried Taro Stem
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: A persimmon hung under the eave of a house and dried untildeveloping
     a powdery exterior. Its mouthwatering sweetnessis simply divine! Truly this is
     autumn's finest treasure.
@@ -3444,7 +3441,7 @@
   name: Dried Persimmon
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: Chopped wasabi pickled in sake. Goes well with alcohol--perhaps a little
     too well. Be wary not to drink too much.
   ingredients:
@@ -3526,7 +3523,7 @@
   name: Pickled Wasabi
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: A plum that has been pickled in salt. Not only is it usedfor battle
     rations, but also as a medicine to cure poisons.
   food_bonus:
@@ -3575,14 +3572,14 @@
   name: Spring Water
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: Water that is renowned for its purity, which has beenmelted down from
     solid ice. I imagine it is the highestquality water that we can hope to find on
     this island.
   name: Renowned Water
   price: 1
   sub_category: ''
-- category: Food
+- category: Cooking
   description: An alcohol fermented with human saliva.It reeks to high heaven and
     is horribly unsanitary.Only the truly courageous are bold enough to consume it.
   ingredients:
@@ -3598,7 +3595,7 @@
   name: Kuchikami Sake
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: Unfiltered, cloudy-white sake.Blends a piercing sourness with a robust,
     rice-like flavor.
   ingredients:
@@ -3617,7 +3614,7 @@
   name: Doburoku
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: 'A drink made by saccharizing rice.Be fooled not by its name: this
     draught is virgin.Gently sweet and energizing.'
   ingredients:
@@ -3627,7 +3624,7 @@
   name: Amazake
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: A clear alcohol that has been filtered and heated.Has a rich flavor
     with a hint of sweetness.
   ingredients:
@@ -3643,7 +3640,7 @@
   name: Refined Sake
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: Highly nutritious roots and leaves have been added to thissake to make
     it medicinal. As bitter as it tastes, at leastit will make you hardy enough to
     resist most poisons.
@@ -3660,7 +3657,7 @@
   name: Medicinal Sake
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: An alcohol made by refining polished rice and fermenting it over low
     heat.Smooth, palatable, and incredibly fragrant.
   ingredients:
@@ -3676,7 +3673,7 @@
   name: Ginjo Sake
   price: 1
   sub_category: Sake
-- category: Food
+- category: Cooking
   description: An alcohol made by carefully selecting only the best grains of riceand
     polishing them to perfection. Its translucence and superlativefragrance certify
     its status as a true work of art.
@@ -3821,7 +3818,7 @@
   name: Buckwheat Shochu
   price: 1
   sub_category: SakeSyouchu
-- category: Food
+- category: Cooking
   description: An alcohol from the far west made with wheat.Myrthe's favorite drink.
     It seems that her faithdoes not forbid the consumption of spirits...
   ingredients:
@@ -4381,7 +4378,7 @@
     name: Sanwa Millet
     operator: ''
   name: Cooked Sanwa Millet
-- category: Cooking
+- category: Food/Cooking
   description: Dried cooked rice that has been rehydratedwith boiling water. It has
     a rather lightflavor, similar to porridge.
   food_bonus:
@@ -5968,7 +5965,7 @@
       name: Skill Buff
     - level: 1
       name: Summer Skill Buff
-- category: Cooking
+- category: Food/Cooking
   description: Wasabi that has been pickled in sake lees.Packed with a ripened spiciness,
     it impartsa satisfying crunch with each and every bite.
   food_bonus:
@@ -6059,7 +6056,7 @@
     - level: 1
       name: Spring Magic Buff
   sub_category: ''
-- category: Cooking
+- category: Food/Cooking
   description: Salted pickled plums that have been sun-dried andfermented. Biting
     into one releases a powerfularoma and a rich, bittersweet flavor.
   food_bonus:
@@ -6142,7 +6139,7 @@
     enchant:
     - level: 6
       name: Water Resistance
-- category: Cooking
+- category: Food/Cooking
   description: Salmon that has been soaked in salt water and driedin the sea breeze.
     This pairs wondrously with sake!Though do take care not to gorge yourself.
   food_bonus:
@@ -6616,7 +6613,7 @@
       name: Biped's Bane
     - level: 2
       name: Quadruped Calamity
-- category: Cooking
+- category: Food/Cooking
   description: This appears to be herring that was preserved with herbs,vinegar, and
     salt. Myrthe says that it is a famous productof her homeland, Ventania. It's not
     entirely unlike sushi.
@@ -6728,7 +6725,7 @@
     name: Sesame
     operator: ''
   name: Sesame Dumpling
-- category: Cooking
+- category: Food/Cooking
   description: Persimmons that have been dried on a cord.This powerfully sweet fruit
     melts in your mouth,making it difficult to put down after the first bite.
   food_bonus:
@@ -6862,7 +6859,7 @@
     name: Bean
     operator: ''
   name: Soba Dumpling
-- category: Cooking
+- category: Food/Cooking
   description: Rice softened in water, then pounded and shapedinto a ball. They have
     long been used as offeringsto the gods from the children of men.
   food_bonus:
@@ -6992,7 +6989,7 @@
     - level: 3
       name: Fire Resistance
   sub_category: ''
-- category: Cooking
+- category: Food/Cooking
   description: Smooth and with a hint of sweetness. Indeed,it tastes as though one
     sip would wash awayany impurity. It's no wonder it's renowned!
   food_bonus:
@@ -7025,7 +7022,7 @@
     season: Spring
     try: 5
   food_bonus:
-    luck: 2
+    luck: 5
   ingredients:
   - amount: 1
     name: Tea
@@ -7141,7 +7138,7 @@
       name: Luck Boost
     - level: 1
       name: Luck Buff
-- category: Cooking
+- category: Food/Cooking
   description: Alcohol fermented with human saliva. It reeks tohigh heaven and is
     horribly unsanitary. Only thetruly courageous are bold enough to consume it.
   food_bonus:
@@ -7159,7 +7156,7 @@
   name: Kuchikami Sake
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: Cloudy white sake that is completely unfiltered.A blend of piercing
     sourness and potent rice flavor.
   food_bonus:
@@ -7184,7 +7181,7 @@
   name: Doburoku
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: 'A beverage made by converting rice into sugar.Be fooled not by its
     name: this draught containsno alcohol. It is gently sweet and energizing.'
   food_bonus:
@@ -7202,7 +7199,7 @@
   name: Amazake
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: Sake that has been filtered and heated until itruns clear. It has a
     rich flavor with just a hintof sweetness to balance out the refined taste.
   food_bonus:
@@ -7211,19 +7208,13 @@
       name: Spectral Scourge
     magic: 5
   ingredients:
-  - amount: 5
-    name: White Rice
-    operator: and
   - amount: 1
-    name: Malt
-    operator: and
-  - amount: 1
-    name: Sugar
+    name: Ginjo Sake
     operator: ''
   name: Refined Sake
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: Sake truly cures all ills. This kind in particular hashad medicinal
     herbs added to it. It will bolster yourfortitude and give you some resistance
     to poison.
@@ -7245,7 +7236,7 @@
   name: Medicinal Sake
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: Sake that is made by refining polished riceand fermenting it over low
     heat. The resultis smooth, palatable, and incredibly fragrant.
   food_bonus:
@@ -7268,7 +7259,7 @@
   name: Ginjo Sake
   price: 1
   sub_category: Sake
-- category: Cooking
+- category: Food/Cooking
   description: Sake made by carefully selecting the finest grainsof rice and polishing
     them to perfection. Translucentand fragrant, it qualifies as a true work of art!
   food_bonus:
@@ -7306,7 +7297,7 @@
     name: Buckwheat Shochu
     operator: ''
   name: Buckwheat Shochu
-- category: Cooking
+- category: Food/Cooking
   description: An alcohol of the far west made from wheat.Its bitterness may be an
     acquired taste,but it certainly goes down smooth.
   food_bonus:
